@@ -210,6 +210,7 @@
 		      <property name="max_saved">10</property>
 		      <property name="directory_entry">False</property>
 		      <property name="modal">True</property>
+		      <property name="use_filechooser">True</property>
 
 		      <child internal-child="entry">
 			<widget class="GtkEntry" id="install_theme_combo_entry">
