@@ -1,3 +1,14 @@
+2004-03-02  Jody Goldberg <jody@gnome.org>
+
+	* gnome-theme-manager.c (load_meta_themes) : revert the commit on
+	  Wed Feb  4 00:05:11 2004  Jonathan Blandford  <jrb@gnome.org>
+	  exit if it is a non-compliant wm (eg, anything but metacity)
+
+2004-02-25  Fernando Herrera  <fherrera@onirica.com>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=132902
+	* theme-install.glade: use GtkFileChooser.
+
 2004-02-13  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.3
